# cca-swebench

./: .env.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Dockerfile  cca-compose.yml  config.toml  config.toml.example  deploy-cca.sh  infrastructure.toml.example  pyproject.toml  requirements.txt
confucius/: __main__.py
confucius/cli/: main.py
confucius/core/: config.py  tracing.py
confucius/orchestrator/: anthropic.py  prompts.py
confucius/server/: __init__.py  app.py  backends.py  dual_model_orchestrator.py  expert_router.py  http_entry.py  http_infra_entry.py  http_routed_entry.py  io_adapter.py  models.py  note_observer.py  note_search_extension.py  session_pool.py  streaming.py  tool_groups.py  utility_tools.py
docs/: cca-agent-as-model-session-summary.md  mcp-tools-migration-guide.md
public/: index.html
scripts/: ci.py  run_eval.py
tests/: FAILING_TESTS.md  cca_client.py  conftest.py  evaluators.py  requirements-test.txt
tests/coder/: test_code_edit_flow.py  test_code_intelligence.py  test_codebase_search.py  test_document_workflow.py  test_rule_lifecycle.py
tests/helpers/: polling.py
tests/integration/: test_cross_session_recall.py  test_full_flow.py  test_knowledge_pipeline.py  test_memory_access.py  test_note_recall.py  test_routing_edge_cases.py  test_security_edge_cases.py  test_tool_isolation.py
tests/user/: test_get_context.py  test_identify_user.py  test_infer_user.py  test_manage_profile.py  test_new_user_onboarding.py  test_profile_crud.py  test_remember_fact.py  test_returning_user_memory.py  (+1 more)
workspace-sync/: sync.sh
(+43 files in other folders)
